# cmake-project-skeleton

./: .gitignore  BuildOptions.cmake  CMakeLists.txt  README.md
cmake/linker/: Map.cmake
src/app/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/utility/: CMakeLists.txt
test/: CMakeLists.txt  main.c  test_suite.c
